--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
   --color-glass-edge: rgba(255, 255, 255, 0.13);
   --color-nav-link: #C2C2C2;
   --font-neue-montreal: "PP Neue Montreal", sans-serif;
+  --font-manrope: var(--font-manrope), sans-serif;
+  --font-neo-sans: "Neo Sans Pro", sans-serif;
   
   /* Animations */
   --animate-anti-gravity: float 8s ease-in-out infinite;
@@ -21,6 +23,10 @@
 /* Custom Utilities */
 @utility btn-assessment-bg {
   background: linear-gradient(284.52deg, rgba(0, 0, 0, 0.15) -96.98%, rgba(102, 102, 102, 0.15) 150.89%);
+}
+
+@utility mask-image-gradient-b {
+  mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
 }
 
 /* Global Reset */
